Fix bug : unable to click on icon links on mobile

--- a/style.css
+++ b/style.css
@@ -193,3 +193,9 @@ p {
   right: 0;
   z-index: 9999;
 }
+
+@media screen and (max-width: 800px) {
+  .widget-container {
+    height: inherit
+  }
+}
